@@ -1,5 +1,12 @@
 2007-11-13  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+		- (nma_show_info_cb, nma_info_dialog_update): handle dialog hiding and
+			destruction correctly, and fix hardware address text on second and
+			later exposes of the dialog
+
+2007-11-13  Dan Williams  <dcbw@redhat.com>
+
 	* src/wireless-security/eap-method-ttls.c
 	  src/wireless-security/eap-method-tls.c
 		- (fill_connection): fix leakage of return value from
